add repository tests and service unit tests